--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -59,6 +59,8 @@
                                     </div>
                                 </form>
 
+                                <p class="mb-5 pb-lg-2" style="color: #ef052a;" th:text="${errorMessage}"></p>
+
                             </div>
                         </div>
                     </div>
